# codexnet

./: .gitignore  AGENTS.md  README.md  RELEASE_NOTES.md  SPEC.md  TASKLIST.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
config/: example.yaml  schema-v1.json
docs/: ad-collection.md  ad-detection.md  architecture.md  artifact-safety.md  baseline.md  collector-framework.md  configuration.md  correlation.md  database-migrations.md  database-operations.md  dependencies.md  dhcp-observation.md  infrastructure-reporting.md  installation.md  neighbor-observation.md  nmap-monitoring.md  operational-diagnostics.md  operator-guide.md  passive-ingestion.md  passive-service.md  performance-soak.md  platform-reporting.md  snmp-collection.md  snmp-infrastructure.md  spec-refinement-notes.md  ssh-collection.md  storage-recovery.md  threat-model.md  topology.md  unifi-collection.md  word-reporting.md
handbook/: index.md
scripts/: run_t605_soak.py
tests/: test_ad_collection.py  test_ad_detection.py  test_artifacts.py  test_cli.py  test_collectors.py  test_config.py  test_correlation.py  test_database.py  test_dhcp.py  test_diagnostics.py  test_documentation_site.py  test_g4_loopback_lab.py  test_infrastructure_reporting.py  test_link_layer.py  test_logging.py  test_mdns.py  test_neighbor.py  test_nmap_import.py  test_nmap_monitoring.py  test_nmap_scan.py  test_nmap_xml.py  test_operator_documentation.py  test_package.py  test_passive.py  test_passive_service.py  test_platform_reporting.py  test_redaction.py  test_release_security.py  test_reporting.py  test_repository.py  (+11 more)
(+97 files in other folders)
